tests/ui/errors/attr.tuples.unknown.too-many-segments.rs
use fortuples::fortuples;

struct Container<T>(T);

fortuples! {
    #[tuples::too::many]
    impl Container<#Tuple> {}
}

fn main() {}
